Refactor code considering SOLID principles and AI mentor recommendations