@@ -4,13 +4,13 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 
 public class FileReaderImpl implements FileReader {
     @Override
     public List<String> read(String fromFileName) {
-        File file = new File(fromFileName);
-        Path inputFilePath = Path.of(file.toURI());
+        Path inputFilePath = Paths.get(fromFileName);
         List<String> lines;
         try {
             lines = Files.readAllLines(inputFilePath);
